--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
+          <!-- password output that displays JS variable finalPassword once function runs through-->
           <textarea
             readonly
             id="password"
@@ -25,6 +26,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
+          <!-- Generate button tied to JS function that generates password-->
           <button id="generate" onclick= "generateBtn()" class="btn">Generate Password</button>
         </div>
       </div>
